tests/js/invalid/record/mismatched-type-4.buri
Data = {
    data: Str,
}

data: Data = {
    data: "hello",
    other: 2,
}